--- a/hackathonvolunteer-APP-status-2026-305hackjan2026.html
+++ b/hackathonvolunteer-APP-status-2026-305hackjan2026.html
@@ -54,7 +54,7 @@
     .cta a{display:block;text-align:center;color:#fff;text-decoration:none;font-weight:700;padding:10px 14px;border-radius:8px}
     .cta-discord{background:linear-gradient(45deg,#7289da,#5865f2)}
     .cta-private{background:linear-gradient(45deg,#43b581,#4caf50)}
-    .cta-db{background:linear-gradient(45deg,#111827,#374151)}
+    .cta-db{background:linear-gradient(45deg,#1a73e8,#1557b0)}
     .cta-form3{background:linear-gradient(45deg,#b45309,#f59e0b)}
     .cta-muted{opacity:.55;cursor:not-allowed;pointer-events:none;filter:grayscale(1)}
     .muted-note{color:#cbd5e1;font-size:12px;opacity:.9;text-align:center;margin-top:4px}
