--- a/hackathonvolunteer-APP-status-2026-305hackjan2026.html
+++ b/hackathonvolunteer-APP-status-2026-305hackjan2026.html
@@ -313,7 +313,7 @@
         <div class="muted-note">This is enabled when your event provides a schedule sheet.</div>
       `;
     }
-    return `<a class="cta-db" href="${url}" target="_blank" rel="noopener">Mentor Schedule / Agenda</a>`;
+    return `<a class="cta-db" href="${url}" target="_blank" rel="noopener">Mentors Schedule (Google Sheet) — Completion Required for All Volunteers</a>`;
   }
 
   async function checkOfficialVolunteerStatus() {
