--- a/hackathonvolunteer-wiki.html
+++ b/hackathonvolunteer-wiki.html
@@ -335,7 +335,7 @@
         Volunteer Portal
       </h1>
       <p class="mt-2 text-gray-600 max-w-3xl">
-        Use this page to join the volunteer mailing list, register as an official supporter (Form No. 2), and review your registration & Ticket ID.
+        Use this page to join the volunteer mailing list, register as an official supporter (Form No. 2), and review your registration & Ticket ID on Volunteer Application Status & Access Portal.
       </p>
     </div>
   </header>
@@ -1429,7 +1429,7 @@
                 <p>
                   Access to the official Code Crunch Discord server is granted to
                   <strong>Form No. 2</strong> volunteers using the <strong>same Google account</strong>
-                  used during registration. Access with Registration & Ticket ID portal.
+                  used during registration. Access at Volunteer Application Status & Access.
               </div>
 
               <div class="vh-box">
@@ -1585,7 +1585,7 @@
         const reviewBtn = renderTriStateButton({
           state: h.reviewTicketState,
           url: h.reviewTicketUrl || VOLUNTEER_PORTAL_URL,
-          label: 'Registration status & Ticket ID Portal',
+          label: 'Volunteer Application Status & Access Portal',
           icon: 'fas fa-ticket',
           variant: 'primary',
           title: 'Volunteer portal access (ticket, discord access, and status)'
