--- a/hackathonvolunteer-APP-status-2026-305hackjan2026.html
+++ b/hackathonvolunteer-APP-status-2026-305hackjan2026.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Volunteer Application Status & Access • Code Crunch</title>
+  <title>Volunteer Application Status & Access Portal • Code Crunch</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
 
   <style>
@@ -141,7 +141,7 @@
   <main class="container">
     <!-- Header -->
     <section class="header">
-      <h1>Volunteer Application Status &amp; Access</h1>
+      <h1>Volunteer Application Status &amp; Access Portal [305 Hackathon Edition January 2026]</h1>
       <p class="subtitle">
         After authentication, volunteers can review their registration details and access volunteer-only tools.
       </p>
