--- a/hackuniversity-onestopform.html
+++ b/hackuniversity-onestopform.html
@@ -354,7 +354,7 @@
               All-In-One Student Access
             </h2>
             <p class="text-sm sm:text-base text-gray-700">
-              Verify your membership, manage hackathon and Business Venture Arena registrations,
+              Verify your membership, manage main event registrations,
               unlock Discord &amp; GroupMe, download certificates, and confirm volunteer or leadership
               participation — all using the same Gmail account you used on the OneStop Form.
             </p>
