--- a/hackuniversity-main-students.html
+++ b/hackuniversity-main-students.html
@@ -392,8 +392,8 @@
   <div class="nav-container">
     <div class="nav-brand">
       <!-- Change href as you want (kept # like your version) -->
-      <a href="https://hackuniversity.vercel.app/" aria-label="Hack University Initiative Home">
-        Hack University Initiative
+      <a href="https://hackuniversity.vercel.app/" aria-label="Hack University Worldwide Home">
+        Hack University Worldwide Initiative
       </a>
     </div>
 
