--- a/hackathonvolunteer-wiki.html
+++ b/hackathonvolunteer-wiki.html
@@ -376,7 +376,7 @@
     <nav class="navbar">
       <div class="nav-container">
         <div class="nav-brand">
-          <a href="#">Hack University Initiative</a>
+          <a href="https://hackuniversity.vercel.app/">Hack University Worldwide Initiative</a>
         </div>
 
         <!-- Mobile toggle -->
@@ -392,8 +392,8 @@
 
         <!-- Links -->
         <div class="nav-links" id="huNavLinks">
-          <a class="nav-link" href="#partners">Partners</a>
-          <a class="nav-link" href="#mission">Mission</a>
+      <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity-main-students.html#partners">Partners</a>
+      <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity-main-students.html#mission">Mission</a>
           <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackathons.html" target="_blank" rel="noopener noreferrer">Hackathons</a>
           <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html" target="_blank" rel="noopener noreferrer">Calendar</a>
         </div>
