--- a/hackuniversitydonate.html
+++ b/hackuniversitydonate.html
@@ -666,7 +666,7 @@
           <li>Mentor/speaker engagement resources</li>
         </ul>
         <div class="cta">
-          <a class="btn btn-primary" href="https://docs.google.com/document/d/1fiMPj6baHyA9dEk74JuJmQxj_n7d6fJy_OlUBFyAaeE/edit?usp=sharing" target="_blank" rel="noopener">📘 View the Code Crunch Donations Guide</a>
+          <a class="btn btn-primary" href="https://docs.google.com/document/d/e/2PACX-1vR1pWeZfJGwYmvBvYOxSzGF-hFfoEa8PL-cnNv72NiKzVpIxLVeTkdYrvMXOv9zwaOHzupxhxtPCpP4/pub" target="_blank" rel="noopener">📘 View the Code Crunch Donations Guide</a>
           <!-- <a class="btn btn-outline" href="https://www.linkedin.com/company/code-crunch-club" target="_blank" rel="noopener">💬 Message Us on LinkedIn</a> -->
         </div>
         <p class="note">Donations sustain hackathons and student success year-round.</p>
