--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -407,7 +407,7 @@
 
         <a class="btn btn-primary w-full"
            href="https://codecrunchglobal.vercel.app/hackathonvolunteer-wiki.html">
-          <i class="fa-solid fa-user-tie"></i> Go to Industry Portal
+          <i class="fa-solid fa-user-tie"></i> Go to Volunteer Portal
         </a>
 
       </article>
