--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -274,7 +274,7 @@
     <nav class="navbar">
       <div class="nav-container">
         <div class="nav-brand">
-          <a href="https://hackuniversity.vercel.app/">Hack University Worldwide Initiative</a>
+          <a href="https://hackuniversity.vercel.app/">Hack University Worldwide Initiative [ HackUniversity.vercel.app ]</a>
         </div>
 
         <!-- Mobile toggle -->
