--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -270,33 +270,46 @@
 
 <body>
 
-    <!-- NAV -->
-    <nav class="navbar">
-      <div class="nav-container">
-        <div class="nav-brand">
-          <a href="https://hackuniversity.vercel.app/">Hack University Worldwide Initiative [ HackUniversity.vercel.app ]</a>
-        </div>
+<!-- NAV -->
+<nav class="navbar">
+  <div class="nav-container">
+    <div class="nav-brand">
+      <a href="https://hackuniversity.vercel.app/">
+        <strong>Hack University Worldwide Initiative </strong><br>
+        <u>HackUniversity.vercel.app</u>
+      </a>
+    </div>
 
-        <!-- Mobile toggle -->
-        <button
-          class="nav-toggle"
-          type="button"
-          aria-label="Toggle navigation"
-          aria-controls="huNavLinks"
-          aria-expanded="false"
-        >
-          <i class="fa-solid fa-bars"></i>
-        </button>
+    <!-- Mobile toggle -->
+    <button
+      class="nav-toggle"
+      type="button"
+      aria-label="Toggle navigation"
+      aria-controls="huNavLinks"
+      aria-expanded="false"
+    >
+      <i class="fa-solid fa-bars"></i>
+    </button>
 
-        <!-- Links -->
-        <div class="nav-links" id="huNavLinks">
-          <a class="nav-link" href="#partners">Partners</a>
-          <a class="nav-link" href="#mission">Mission</a>
-          <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackathons.html" target="_blank" rel="noopener noreferrer">Hackathons</a>
-          <a class="nav-link" href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html" target="_blank" rel="noopener noreferrer">Calendar</a>
-        </div>
-      </div>
-    </nav>
+    <!-- Links -->
+    <div class="nav-links" id="huNavLinks">
+      <a class="nav-link" href="#partners">Partners</a>
+      <a class="nav-link" href="#mission">Mission</a>
+      <a
+        class="nav-link"
+        href="https://codecrunchglobal.vercel.app/hackathons.html"
+        target="_blank"
+        rel="noopener noreferrer"
+      >Hackathons</a>
+      <a
+        class="nav-link"
+        href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html"
+        target="_blank"
+        rel="noopener noreferrer"
+      >Calendar</a>
+    </div>
+  </div>
+</nav>
 
 
   <!-- HERO -->
