--- a/2026-305hackjan2026.html
+++ b/2026-305hackjan2026.html
@@ -412,46 +412,71 @@
               Theme: AI in Healthcare &amp; Biotech · Hybrid worldwide event
             </div>
 
-            <!-- <p class="text-sm sm:text-base text-slate-600">
-              A hybrid global problem-solving competition that combines a <strong>Tech build hackathon track (Code or Hardware)</strong> and a
-              <strong>Business Venture Arena (pitch track)</strong>, all focused on
-              <span class="font-semibold">AI-powered innovation in healthcare, biotech, and patient outcomes</span>.
-            </p> -->
 
-          <p class="text-sm sm:text-base text-slate-600">
-            A hybrid global <strong>3-in-1 competition</strong> that brings together technical innovation,
-            entrepreneurship, and data analytics, all focused on
+
+          <!-- Replace ONLY your current <p class="mt-2 ...">...</p> with this block -->
+          <div class="mt-4 w-full max-w-none">
+            <p class="text-gray-600 leading-relaxed">
+              A hackathon is a fast-paced, hands-on problem-solving competition where you turn ideas into real solutions.
+              Hack University hackathons bring students from all majors together to build, pitch, and compete across
+              <strong>three different challenge tracks</strong>.
+            </p>
+
+            <p class="mt-3 text-gray-600 leading-relaxed">
+              <strong>A hybrid global 3-in-1 competition</strong> that brings together technical innovation, entrepreneurship, and data analytics, all focused on
             <span class="font-semibold">AI-powered solutions in healthcare, biotech, and patient outcomes</span>.
-          </p>
+            </p>
 
-          <ul class="mt-3 space-y-3 text-sm sm:text-base text-slate-600">
-            <li>
-              <strong>Tech Build Hackathon (Code or Hardware):</strong>
-              Participants design and build technical solutions using software, hardware, or a combination of both.
-              <br />
-              <span class="text-slate-500">
-                Why it matters: Builds real-world engineering skills, hands-on problem solving, and project experience that students can showcase in portfolios and technical interviews.
-              </span>
-            </li>
+            <div class="mt-5 grid grid-cols-1 lg:grid-cols-3 gap-4">
+              <!-- Track 1 -->
+              <div class="bg-white border border-gray-200 rounded-xl p-5 shadow-sm">
+                <h3 class="text-gray-900 font-extrabold text-base">
+                  Tech Build Hackathon <span class="font-semibold text-gray-700">(Code or Hardware)</span>
+                </h3>
+                <p class="mt-2 text-gray-600 text-sm leading-relaxed">
+                  Participants design and build technical solutions using software, hardware, or a combination of both.
+                </p>
+                <p class="mt-3 text-gray-700 text-sm leading-relaxed">
+                  <strong>Why it matters:</strong> Builds real-world engineering skills, hands-on problem solving, and project experience students can
+                  showcase in portfolios and technical interviews.
+                </p>
+              </div>
 
-            <li>
-              <strong>Business Venture Arena (Tech-to-Business Pitch):</strong>
-              Teams translate technical ideas into viable, impact-driven business or startup concepts.
-              <br />
-              <span class="text-slate-500">
-                Why it matters: Helps students learn how to communicate technical ideas, evaluate feasibility, and think beyond code toward real-world adoption and impact.
-              </span>
-            </li>
+              <!-- Track 2 -->
+              <div class="bg-white border border-gray-200 rounded-xl p-5 shadow-sm">
+                <h3 class="text-gray-900 font-extrabold text-base">
+                  Business Venture Arena <span class="font-semibold text-gray-700">(Tech-to-Business Pitch)</span>
+                </h3>
+                <p class="mt-2 text-gray-600 text-sm leading-relaxed">
+                  Teams translate technical ideas into viable, impact-driven business or startup concepts.
+                </p>
+                <p class="mt-3 text-gray-700 text-sm leading-relaxed">
+                  <strong>Why it matters:</strong> Helps students communicate technical ideas, evaluate feasibility, and think beyond code toward
+                  real-world adoption and impact.
+                </p>
+              </div>
 
-            <li>
-              <strong>305 Excel Data Duel (Live Data Analytics Challenge):</strong>
-              A live analytics competition where participants solve timed Excel-based data challenges, earn points, and compete for a top score.
-              <br />
-              <span class="text-slate-500">
-                Why it matters: Strengthens analytical thinking, data literacy, and decision-making skills that are essential across business, engineering, and data-driven careers.
-              </span>
-            </li>
-          </ul>
+              <!-- Track 3 -->
+              <div class="bg-white border border-gray-200 rounded-xl p-5 shadow-sm">
+                <h3 class="text-gray-900 font-extrabold text-base">
+                  305 Excel Data Duel <span class="font-semibold text-gray-700">(Live Data Analytics Challenge)</span>
+                </h3>
+                <p class="mt-2 text-gray-600 text-sm leading-relaxed">
+                  A live analytics competition where participants solve timed Excel-based data challenges, earn points, and compete for a top score.
+                </p>
+                <p class="mt-3 text-gray-700 text-sm leading-relaxed">
+                  <strong>Why it matters:</strong> Strengthens analytical thinking, data literacy, and decision-making skills that are essential across
+                  business, engineering, and data-driven careers.
+                </p>
+              </div>
+            </div>
+
+            <p class="mt-5 text-gray-600 leading-relaxed">
+              Open to everyone worldwide — beginners, advanced builders, and non-tech majors welcome.
+              No prior experience needed. Ages 16+ accepted (under 18 requires parental or guardian consent).
+            </p>
+          </div>
+
 
 
 
