--- a/hackuniversity-hackathons.html
+++ b/hackuniversity-hackathons.html
@@ -474,19 +474,72 @@
   Check our upcoming and past hackathons below. Open to everyone worldwide, all majors welcome. Ages 16+ accepted (under 18 requires parental/guardian consent).
 </p> -->
 
-<p class="mt-2 text-gray-600 max-w-2xl">
-  A hackathon is a fast-paced problem-solving, hands-on competition where you turn ideas into real solutions.
-  Hack University hackathons bring students from all majors together to build, pitch, and compete
-  across <strong>three different challenge tracks</strong>:<br>
-  • <strong>Tech Build Challenge</strong> (code or hardware) – <em>Build something real, from AI apps to smart tools that actually solve problems</em><br>
-  • <strong>Business Venture Arena</strong> (<strong>no code</strong>, pitch-only) – <em>Turn an idea into a startup-style pitch with real impact</em><br>
-  • <strong>Live Challenge Track</strong> (305 Excel Data Duel) – <em>Compete live in Excel, rack up points, and prove your data skills in real time</em><br><br>
-  Open to everyone worldwide — beginners, advanced builders, and non-tech majors welcome.
-  No prior experience needed. Ages 16+ accepted (under 18 requires parental or guardian consent).
-</p>
+<!-- Replace ONLY your current <p class="mt-2 ...">...</p> with this block -->
+<div class="mt-4 w-full max-w-none">
+  <p class="text-gray-600 leading-relaxed">
+    A hackathon is a fast-paced, hands-on problem-solving competition where you turn ideas into real solutions.
+    Hack University hackathons bring students from all majors together to build, pitch, and compete across
+    <strong>three different challenge tracks</strong>.
+  </p>
+
+  <p class="mt-3 text-gray-600 leading-relaxed">
+    <strong>A hybrid global 3-in-1 competition</strong> that brings together technical innovation, entrepreneurship, and data analytics.
+  </p>
+
+  <div class="mt-5 grid grid-cols-1 lg:grid-cols-3 gap-4">
+    <!-- Track 1 -->
+    <div class="bg-white border border-gray-200 rounded-xl p-5 shadow-sm">
+      <h3 class="text-gray-900 font-extrabold text-base">
+        Tech Build Hackathon <span class="font-semibold text-gray-700">(Code or Hardware)</span>
+      </h3>
+      <p class="mt-2 text-gray-600 text-sm leading-relaxed">
+        Participants design and build technical solutions using software, hardware, or a combination of both.
+      </p>
+      <p class="mt-3 text-gray-700 text-sm leading-relaxed">
+        <strong>Why it matters:</strong> Builds real-world engineering skills, hands-on problem solving, and project experience students can showcase in portfolios and technical interviews.
+      </p>
+    </div>
+
+    <!-- Track 2 -->
+    <div class="bg-white border border-gray-200 rounded-xl p-5 shadow-sm">
+      <h3 class="text-gray-900 font-extrabold text-base">
+        Business Venture Arena <span class="font-semibold text-gray-700">(Tech-to-Business Pitch)</span>
+      </h3>
+      <p class="mt-2 text-gray-600 text-sm leading-relaxed">
+        Teams translate technical ideas into viable, impact-driven business or startup concepts.
+      </p>
+      <p class="mt-3 text-gray-700 text-sm leading-relaxed">
+        <strong>Why it matters:</strong> Helps students communicate technical ideas, evaluate feasibility, and think beyond code toward
+        real-world adoption and impact.
+      </p>
+    </div>
+
+    <!-- Track 3 -->
+    <div class="bg-white border border-gray-200 rounded-xl p-5 shadow-sm">
+      <h3 class="text-gray-900 font-extrabold text-base">
+        305 Excel Data Duel <span class="font-semibold text-gray-700">(Live Data Analytics Challenge)</span>
+      </h3>
+      <p class="mt-2 text-gray-600 text-sm leading-relaxed">
+        A live analytics competition where participants solve timed Excel-based data challenges, earn points, and compete for a top score.
+      </p>
+      <p class="mt-3 text-gray-700 text-sm leading-relaxed">
+        <strong>Why it matters:</strong> Strengthens analytical thinking, data literacy, and decision-making skills that are essential across
+        business, engineering, and data-driven careers.
+      </p>
+    </div>
+  </div>
+
+  <p class="mt-5 text-gray-600 leading-relaxed">
+    Open to everyone worldwide — beginners, advanced builders, and non-tech majors welcome.
+    No prior experience needed. Ages 16+ accepted (under 18 requires parental or guardian consent).
+  </p>
+</div>
+
 
 
 </div>
+
+
 </header>
 
 
